--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,5 +1,5 @@
 NAME = philo_bonus
-SRCS = ./philo_bonus.c ./philo_utils_bonus.c
+SRCS = ./philo_bonus.c ./philo_utils_bonus.c ./philo_init_bonus.c ./philo_life_bonus.c ./destruct_bonus.c
 OBJS = ${SRCS:.c=.o}
 CFLAGS = -Wall -Wextra -Werror
 
